<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#9acef8"
    android:layout_gravity="center">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="250dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TxtBienvenido"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:text="@string/TxtBienvenido"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/EtxtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="username"
                android:ems="10"
                android:hint="@string/EtxtEmail"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="#6C6C6C"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/EtxtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="password"
                android:ems="10"
                android:hint="@string/EtxtPassword"
                android:inputType="textPassword"
                android:textColorHint="#6C6C6C"
                android:textSize="20sp" />

            <Button
                android:id="@+id/BtnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Login">

            </Button>
        </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>
